<resources>
    <string name="app_name">WeatherApp</string>
    <string name="city_name">St. Paul, MN</string>
    <string name="current_temp">72\u00B0</string>
    <string name="feels_like">Feels like: %d\u00B0</string>
    <string name="low">Low: %d\u00B0</string>
    <string name="high">High: %d\u00B0</string>
    <string name="humidity">Humidity: %d%%</string>
    <string name="pressure">Pressure: %dhPa</string>
    <string name="forecast">Forecast</string>
    <string name="sunrise">Sunrise: %s</string>
    <string name="sunset">Sunset: %s</string>
    <string name="temperature">%s\u00B0</string>
    <string name="locationName">%s</string>
    <string name="get_weather_for_my_location">Get Weather for My Location</string>
</resources>