<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/city_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/city_name"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/current_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_temp"
        android:textSize="84sp"
        android:layout_marginStart="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city_name" />

    <ImageView
        android:id="@+id/current_condition_icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:src="@drawable/clear_sky"
        android:importantForAccessibility="no"
        android:layout_margin="48dp"
        android:adjustViewBounds="true"
        android:scaleX="1.75"
        android:scaleY="1.75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/current_temp"
        app:layout_constraintBottom_toBottomOf="@id/feels_like"/>

    <TextView
        android:id="@+id/feels_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feels_like"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/current_temp"
        app:layout_constraintTop_toBottomOf="@id/current_temp"/>

    <TextView
        android:id="@+id/low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feels_like"/>

    <TextView
        android:id="@+id/high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/low"
        app:layout_constraintTop_toBottomOf="@id/low"/>

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/low"
        app:layout_constraintTop_toBottomOf="@id/high"/>

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/low"
        app:layout_constraintTop_toBottomOf="@id/humidity"/>

    <Button
        android:id="@+id/forecastButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forecast"
        android:layout_marginBottom="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>